# Gerapy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  Vagrantfile  dev.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_docker_image_master.yml  build_docker_image_release.yml  builddockerimagemaster.yml  builddockerimagerelease.yml  codeql-analysis.yml  dockerimage.yml  dockerimagemaster.yml  gerapytest.yml  main.yml  pythonpackage.yml  sync_docs.yml  test_gerapy.yml  testgerapy.yml  updatedocs.yml
Deploy_Python3/: README.md  hosts  site.retry  site.yml
Deploy_Python3/group_vars/: all
deploy/: ansible.cfg  copy_ssh.sh  key
deploy/group_vars/: all
docker/: Dockerfile  README.md  requirements.txt  run.sh
docs/: README.md  requirements.txt  中文文档.markdown
gerapy/: VERSION  __init__.py  __version__.py  run.py  scrapy.cfg  settings.py
gerapy/client/: README.md  element-variables.css  package-lock.json  package.json  twistd.pid  vue.config.js
gerapy/client2/: .gitignore  package-lock.json  package.json
gerapy/cmd/: __init__.py  generate.py  init.py  initadmin.py  parse.py  server.py  version.py
gerapy/docker/: Dockerfile  run.sh
gerapy/downloadermiddlewares/: __init__.py  cookies.py  proxy.py  pyppeteer.py
gerapy/news/: items.py  middlewares.py  pipelines.py  settings.py
gerapy/pipelines/: __init__.py  mongo.py  mongodb.py  mysql.py
gerapy/server/: .gitignore  db.sqlite3  manage.py
gerapy/spiders/: __init__.py  crawl.py  crawlspider.py  json.py  (+1 more)
tests/: aptest.py
updateHosts/: hostsExample.json  updateHosts.py
(+817 files in other folders)
